Update inverse PCA filename. Working on Feature transformation

--- a/notebooks/3.0_feature_transformation.ipynb
+++ b/notebooks/3.0_feature_transformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6454a988",
    "metadata": {},
    "outputs": [],
@@ -28,25 +28,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "id": "db821e5c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# File data\n",
     "csv1 = '../data/fer_data.csv'\n",
-    "csv2 = '../data/fer_pca.csv'\n",
-    "csv3 = '../data/fer_pca_scaled.csv'\n",
-    "csv4 = '../data/fer_pca_inverted.csv'\n",
+    "csv2 = '../data/pca/fer_pca_inverse.csv'\n",
     "df = pd.read_csv(csv1)\n",
-    "df_pca = pd.read_csv(csv2)\n",
-    "df_scaled = pd.read_csv(csv3)\n",
-    "df_inverted = pd.read_csv(csv4)"
+    "df_pca = pd.read_csv(csv2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "f554a3e7",
    "metadata": {},
    "outputs": [
@@ -120,7 +116,7 @@
        "4  train        3  248 187 149 130 97 140 139 117 197 251 231 255..."
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "091da128",
    "metadata": {},
    "outputs": [
@@ -158,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "id": "44182448",
    "metadata": {},
    "outputs": [
@@ -193,31 +189,31 @@
        "      <th>0</th>\n",
        "      <td>train</td>\n",
        "      <td>3</td>\n",
-       "      <td>-0.4589713258466273 0.9620935463883824 -0.5578...</td>\n",
+       "      <td>-0.45897132584662703 0.9620935463883798 -0.557...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>train</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.49198604184990596 -1.0021801630235332 0.2740...</td>\n",
+       "      <td>0.4919860418499058 -1.0021801630235334 0.27409...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>train</td>\n",
        "      <td>3</td>\n",
-       "      <td>-0.9419501076570936 1.4385249489843606 0.29373...</td>\n",
+       "      <td>-0.9419501076570942 1.438524948984368 0.293738...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>train</td>\n",
        "      <td>3</td>\n",
-       "      <td>-1.2800578618783145 0.23932335345423014 0.4704...</td>\n",
+       "      <td>-1.280057861878317 0.23932335345423839 0.47044...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>train</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.10681625087574131 -0.7089926999517403 0.3826...</td>\n",
+       "      <td>0.10681625087574058 -0.7089926999517379 0.3826...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -225,14 +221,14 @@
       ],
       "text/plain": [
        "   usage  emotion                                                pca\n",
-       "0  train        3  -0.4589713258466273 0.9620935463883824 -0.5578...\n",
-       "1  train        3  0.49198604184990596 -1.0021801630235332 0.2740...\n",
-       "2  train        3  -0.9419501076570936 1.4385249489843606 0.29373...\n",
-       "3  train        3  -1.2800578618783145 0.23932335345423014 0.4704...\n",
-       "4  train        3  0.10681625087574131 -0.7089926999517403 0.3826..."
+       "0  train        3  -0.45897132584662703 0.9620935463883798 -0.557...\n",
+       "1  train        3  0.4919860418499058 -1.0021801630235334 0.27409...\n",
+       "2  train        3  -0.9419501076570942 1.438524948984368 0.293738...\n",
+       "3  train        3  -1.280057861878317 0.23932335345423839 0.47044...\n",
+       "4  train        3  0.10681625087574058 -0.7089926999517379 0.3826..."
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "b1792e09",
    "metadata": {},
    "outputs": [
@@ -270,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "0fdeea6a",
    "metadata": {},
    "outputs": [
@@ -305,31 +301,31 @@
        "      <th>0</th>\n",
        "      <td>train</td>\n",
        "      <td>3</td>\n",
-       "      <td>-0.45897132584664374 0.9620935463885611 -0.557...</td>\n",
+       "      <td>-0.4589713258466441 0.9620935463885597 -0.5578...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>train</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.49198604184990163 -1.0021801630233436 0.2740...</td>\n",
+       "      <td>0.49198604184990213 -1.0021801630233422 0.2740...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>train</td>\n",
        "      <td>3</td>\n",
-       "      <td>-0.9419501076571135 1.4385249489845315 0.29373...</td>\n",
+       "      <td>-0.9419501076571143 1.438524948984531 0.293738...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>train</td>\n",
        "      <td>3</td>\n",
-       "      <td>-1.2800578618783292 0.2393233534543937 0.47044...</td>\n",
+       "      <td>-1.2800578618783292 0.23932335345439293 0.4704...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>train</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.10681625087573483 -0.708992699951556 0.38266...</td>\n",
+       "      <td>0.10681625087573506 -0.7089926999515551 0.3826...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -337,20 +333,159 @@
       ],
       "text/plain": [
        "   usage  emotion                                                pca\n",
-       "0  train        3  -0.45897132584664374 0.9620935463885611 -0.557...\n",
-       "1  train        3  0.49198604184990163 -1.0021801630233436 0.2740...\n",
-       "2  train        3  -0.9419501076571135 1.4385249489845315 0.29373...\n",
-       "3  train        3  -1.2800578618783292 0.2393233534543937 0.47044...\n",
-       "4  train        3  0.10681625087573483 -0.708992699951556 0.38266..."
+       "0  train        3  -0.4589713258466441 0.9620935463885597 -0.5578...\n",
+       "1  train        3  0.49198604184990213 -1.0021801630233422 0.2740...\n",
+       "2  train        3  -0.9419501076571143 1.438524948984531 0.293738...\n",
+       "3  train        3  -1.2800578618783292 0.23932335345439293 0.4704...\n",
+       "4  train        3  0.10681625087573506 -0.7089926999515551 0.3826..."
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_scaled.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7db3e5ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 39328 entries, 0 to 39327\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   usage    39328 non-null  object\n",
+      " 1   emotion  39328 non-null  int64 \n",
+      " 2   pca      39328 non-null  object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 921.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_scaled.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d63ead91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>usage</th>\n",
+       "      <th>emotion</th>\n",
+       "      <th>pca</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>train</td>\n",
+       "      <td>3</td>\n",
+       "      <td>100.96176364887613 106.53992358041177 100.6412...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>train</td>\n",
+       "      <td>3</td>\n",
+       "      <td>152.7166015575593 154.02673465179078 151.48387...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>train</td>\n",
+       "      <td>3</td>\n",
+       "      <td>109.64371955978082 120.23667121687154 134.1352...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>train</td>\n",
+       "      <td>3</td>\n",
+       "      <td>141.39251327031766 140.92730108093437 132.6887...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>train</td>\n",
+       "      <td>3</td>\n",
+       "      <td>216.73697283769206 197.12484063939417 163.6246...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   usage  emotion                                                pca\n",
+       "0  train        3  100.96176364887613 106.53992358041177 100.6412...\n",
+       "1  train        3  152.7166015575593 154.02673465179078 151.48387...\n",
+       "2  train        3  109.64371955978082 120.23667121687154 134.1352...\n",
+       "3  train        3  141.39251327031766 140.92730108093437 132.6887...\n",
+       "4  train        3  216.73697283769206 197.12484063939417 163.6246..."
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_inverted.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "100fb7b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 39328 entries, 0 to 39327\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   usage    39328 non-null  object\n",
+      " 1   emotion  39328 non-null  int64 \n",
+      " 2   pca      39328 non-null  object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 921.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_scaled.info()"
    ]
   },
   {
@@ -363,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "b08cc728",
    "metadata": {},
    "outputs": [],
@@ -408,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "a9791b4d",
    "metadata": {},
    "outputs": [],
@@ -430,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "d6d79629",
    "metadata": {},
    "outputs": [
@@ -478,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "id": "85c5eaa5",
    "metadata": {},
    "outputs": [],
@@ -490,11 +625,14 @@
     "    return keypoints, descriptors\n",
     "\n",
     "\n",
-    "def extractFeatures(df, featureDetector):\n",
+    "def extractFeatures(df, featureDetector, pca):\n",
     "    descriptors = []\n",
     "    emotions = []\n",
     "    for index, row in df.iterrows():\n",
-    "        image = np.fromstring(row.pixels, dtype=int, sep=' ')\n",
+    "        if pca == True:\n",
+    "            image = np.fromstring(row.pca, sep=' ')\n",
+    "        else:\n",
+    "            image = np.fromstring(row.pixels, dtype=int, sep=' ')\n",
     "        image = image.reshape(48,48).astype('uint8')\n",
     "        kp, desc = getDescriptors(image, featureDetector)\n",
     "        if type(desc) != type(None):\n",
@@ -534,9 +672,9 @@
     "    return histograms\n",
     "\n",
     "\n",
-    "def processFeatureExtraction(df, k, featureDetector):\n",
-    "    train_descriptors, train_emotions = extractFeatures(df[df['usage']=='train'], featureDetector)\n",
-    "    test_descriptors, test_emotions = extractFeatures(df[df['usage']=='test'], featureDetector)\n",
+    "def processFeatureExtraction(df, k, featureDetector, pca):\n",
+    "    train_descriptors, train_emotions = extractFeatures(df[df['usage']=='train'], featureDetector, pca)\n",
+    "    test_descriptors, test_emotions = extractFeatures(df[df['usage']=='test'], featureDetector, pca)\n",
     "\n",
     "    # Flatten data\n",
     "    train_descriptors_flat = flatFeatures(train_descriptors)\n",
@@ -566,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "6ae2a863",
    "metadata": {},
    "outputs": [],
@@ -596,12 +734,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "01eb6062",
+   "metadata": {},
+   "source": [
+    "### SIFT"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "443a965a",
+   "execution_count": 41,
+   "id": "80ed5358",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Set K values\n",
+    "k = [100, 500, 1000]"
+   ]
   },
   {
    "cell_type": "code",
@@ -635,12 +784,18 @@
     }
    ],
    "source": [
-    "# SIFT\n",
-    "k = [100, 500, 1000]\n",
+    "# Original data\n",
     "for i in range(len(k)):\n",
-    "    X_train, y_train, X_test, y_test = processFeatureExtraction(df, k[i], sift())\n",
-    "    csv = '../data/sift_'+str(k[i])+'.csv'\n",
-    "    saveHistograms(csv, X_train, y_train, X_test, y_test )"
+    "    X_train, y_train, X_test, y_test = processFeatureExtraction(df, k[i], sift(), False)\n",
+    "    csv = '../data/sift/sift_'+str(k[i])+'.csv'\n",
+    "    saveHistograms(csv, X_train, y_train, X_test, y_test )\n",
+    "\n",
+    "# PCA inversed \n",
+    "for i in range(len(k)):\n",
+    "    X_train, y_train, X_test, y_test = processFeatureExtraction(df, k[i], sift(), False)\n",
+    "    csv = '../data/sift/sift_'+str(k[i])+'.csv'\n",
+    "    saveHistograms(csv, X_train, y_train, X_test, y_test )\n",
+    "    "
    ]
   },
   {
