added np.savez arrays export

--- a/notebooks/ivan/7.4_im_TensorFlow_augmentation.ipynb
+++ b/notebooks/ivan/7.4_im_TensorFlow_augmentation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c274e3d6",
+   "id": "4626973c",
    "metadata": {},
    "outputs": [
     {
@@ -139,8 +139,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "6aef0e15",
+   "execution_count": 266,
+   "id": "4cf7f919",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savez('../../../project_data/test.npz', test_images=test_images, test_labels=test_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "id": "5500ee66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savez('../../../project_data/train.npz', train_images, train_labels)\n",
+    "np.savez('../../../project_data/test.npz', test_images, test_labels)\n",
+    "np.savez('../../../project_data/validation.npz', validation_images, validation_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "id": "3e0bcc77",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ec28b74c",
+   "id": "bccd89fc",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2af89b05",
+   "id": "e05e53b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ed3eae02",
+   "id": "94cde765",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9479fa97",
+   "id": "3d9c77b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d425c827",
+   "id": "396b3a6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "26f38cd8",
+   "id": "3947c70e",
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0bea58e5",
+   "id": "817a2542",
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "24d5b4b7",
+   "id": "80c5ff21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "25b4d8b9",
+   "id": "421ad6eb",
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1536,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ac06169c",
+   "id": "ddeafd1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1523,8 +1545,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 265,
+   "id": "fff797fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('../../../project_data/500_epochs.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 245,
-   "id": "86d54640",
+   "id": "dbc4e0da",
    "metadata": {},
    "outputs": [
     {
@@ -1546,7 +1578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c2d539e",
+   "id": "f17da0aa",
    "metadata": {},
    "source": [
     "## Visualize Random image going through the network\n"
@@ -1554,7 +1586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff61dfe7",
+   "id": "eae05d84",
    "metadata": {},
    "source": [
     "### Step by Step"
@@ -1563,7 +1595,7 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "id": "1afb259d",
+   "id": "4ef9041e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1575,7 +1607,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "d435ccf2",
+   "id": "6ef2f925",
    "metadata": {},
    "outputs": [
     {
@@ -1609,7 +1641,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "b6c394ad",
+   "id": "d7242232",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1621,7 +1653,7 @@
   {
    "cell_type": "code",
    "execution_count": 250,
-   "id": "d02c0fb9",
+   "id": "4ef04e5e",
    "metadata": {},
    "outputs": [
     {
@@ -1642,7 +1674,7 @@
   {
    "cell_type": "code",
    "execution_count": 251,
-   "id": "3d273718",
+   "id": "def0a442",
    "metadata": {},
    "outputs": [
     {
@@ -2369,7 +2401,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "81919fbc",
+   "id": "2dbb6c40",
    "metadata": {},
    "outputs": [
     {
@@ -2404,7 +2436,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "6045b9b2",
+   "id": "5e835dbc",
    "metadata": {},
    "outputs": [
     {
@@ -2425,7 +2457,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "b08053f7",
+   "id": "32eba189",
    "metadata": {},
    "outputs": [
     {
@@ -2446,7 +2478,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "f1a51d07",
+   "id": "9adfeb03",
    "metadata": {},
    "outputs": [
     {
@@ -2476,7 +2508,7 @@
   {
    "cell_type": "code",
    "execution_count": 256,
-   "id": "cba42108",
+   "id": "e7c38903",
    "metadata": {},
    "outputs": [
     {
@@ -2602,16 +2634,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67d9ab66",
+   "id": "49aa78a9",
    "metadata": {},
    "source": [
-    "### One blob"
+    "### One cell"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 257,
-   "id": "a5aae7a3",
+   "id": "b3f66deb",
    "metadata": {},
    "outputs": [
     {
@@ -2766,14 +2798,6 @@
     "        plt.grid(False)\n",
     "        plt.imshow(display_grid, aspect='auto', cmap='viridis')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ffe9a37",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
