Show the result of last save data. Demention reduction completed.

--- a/notebooks/2.0_demension_reduction.ipynb
+++ b/notebooks/2.0_demension_reduction.ipynb
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32f1b029",
+   "id": "1cb627fd",
    "metadata": {},
    "source": [
     "## Display FisherFace"
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "01f39303",
+   "id": "5519b1c0",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "af6b4728",
+   "id": "1c7a9ad0",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "058a714c",
+   "id": "37136986",
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "77d97b52",
+   "id": "79836e30",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "7e5f6caf",
+   "id": "7c5f4418",
    "metadata": {
     "scrolled": true
    },
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "ad8c9e96",
+   "id": "e7e5bdce",
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "babf9771",
+   "id": "c30a9f1e",
    "metadata": {},
    "source": [
     "## Display FisherFace"
@@ -982,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "81356fd3",
+   "id": "5e40cd50",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "90a58d3f",
+   "id": "7db1d243",
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "7afc03aa",
+   "id": "c96e9d41",
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "a09dec4e",
+   "id": "9a896fce",
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "ba26c165",
+   "id": "b6d66ac0",
    "metadata": {
     "scrolled": false
    },
@@ -1146,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "cf224714",
+   "id": "fbc5749b",
    "metadata": {},
    "outputs": [
     {
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ea31140",
+   "id": "a2d39b9d",
    "metadata": {},
    "source": [
     "## Display FisherFace"
@@ -1553,7 +1553,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "564563bf",
+   "id": "45e7a524",
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1575,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "805615a3",
+   "id": "85e1871e",
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "36ff0fea",
+   "id": "30809cd1",
    "metadata": {},
    "outputs": [
     {
@@ -1625,7 +1625,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "c9c19e51",
+   "id": "3f7b5a14",
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1647,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "990df9bd",
+   "id": "692cc510",
    "metadata": {
     "scrolled": true
    },
@@ -1717,7 +1717,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "d9db0bbe",
+   "id": "2cbe3140",
    "metadata": {},
    "outputs": [
     {
@@ -2115,7 +2115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13d59472",
+   "id": "91001734",
    "metadata": {},
    "source": [
     "## Display FisherFace"
@@ -2124,7 +2124,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "2dd70756",
+   "id": "b46bab81",
    "metadata": {},
    "outputs": [
     {
@@ -2146,7 +2146,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "95a5ace2",
+   "id": "edbc5565",
    "metadata": {},
    "outputs": [
     {
@@ -2167,7 +2167,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "edaa48f8",
+   "id": "d215b129",
    "metadata": {},
    "outputs": [
     {
@@ -2196,7 +2196,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "673a04dc",
+   "id": "6f28848e",
    "metadata": {},
    "outputs": [
     {
@@ -2218,7 +2218,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "3431e7a6",
+   "id": "0c6edef8",
    "metadata": {
     "scrolled": true
    },
@@ -2288,7 +2288,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "23dfcd4b",
+   "id": "ab25522a",
    "metadata": {},
    "outputs": [
     {
@@ -2582,10 +2582,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "id": "25ab0301",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 39328 entries, 0 to 39327\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   usage    39328 non-null  object\n",
+      " 1   emotion  39328 non-null  int64 \n",
+      " 2   pca      39328 non-null  object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 921.9+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "savePCA('../data/pca/fer_pca_inverse.csv', X_train_inverse, y_train, X_test_inverse, y_test)"
    ]
