added regularization, cracked 66.5% accuracy

--- a/notebooks/ivan/7.4_im_TensorFlow_augmentation.ipynb
+++ b/notebooks/ivan/7.4_im_TensorFlow_augmentation.ipynb
@@ -2761,7 +2761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a50046f",
+   "id": "9e867dbc",
    "metadata": {},
    "source": [
     "## Remove one Dense activation layer // Reduce dropout // lower learning rate"
@@ -2769,7 +2769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4655470c",
+   "id": "211bd3a5",
    "metadata": {},
    "source": [
     "### LR=0.0005"
@@ -2778,7 +2778,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "d4cea10d",
+   "id": "5a8a354f",
    "metadata": {},
    "outputs": [
     {
@@ -3165,13 +3165,7 @@
       "28/28 [==============================] - 7s 259ms/step - loss: 1.1916 - accuracy: 0.5438 - val_loss: 1.1180 - val_accuracy: 0.5792\n",
       "Epoch 170/800\n",
       "28/28 [==============================] - 7s 258ms/step - loss: 1.1805 - accuracy: 0.5513 - val_loss: 1.0927 - val_accuracy: 0.5762\n",
-      "Epoch 171/800\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 171/800\n",
       "28/28 [==============================] - 7s 258ms/step - loss: 1.2020 - accuracy: 0.5460 - val_loss: 1.1405 - val_accuracy: 0.5692\n",
       "Epoch 172/800\n",
       "28/28 [==============================] - 8s 282ms/step - loss: 1.1873 - accuracy: 0.5484 - val_loss: 1.1064 - val_accuracy: 0.5773\n",
@@ -3401,13 +3395,7 @@
       "28/28 [==============================] - 7s 250ms/step - loss: 1.1221 - accuracy: 0.5781 - val_loss: 1.0456 - val_accuracy: 0.6085\n",
       "Epoch 282/800\n",
       "28/28 [==============================] - 7s 252ms/step - loss: 1.1192 - accuracy: 0.5741 - val_loss: 1.0776 - val_accuracy: 0.5926\n",
-      "Epoch 283/800\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 283/800\n",
       "28/28 [==============================] - 8s 280ms/step - loss: 1.1265 - accuracy: 0.5734 - val_loss: 1.0150 - val_accuracy: 0.6166\n",
       "Epoch 284/800\n",
       "28/28 [==============================] - 7s 247ms/step - loss: 1.1196 - accuracy: 0.5754 - val_loss: 1.0409 - val_accuracy: 0.6088\n",
@@ -3637,13 +3625,7 @@
       "28/28 [==============================] - 7s 248ms/step - loss: 1.0688 - accuracy: 0.5969 - val_loss: 1.0023 - val_accuracy: 0.6208\n",
       "Epoch 394/800\n",
       "28/28 [==============================] - 7s 254ms/step - loss: 1.0710 - accuracy: 0.5962 - val_loss: 1.0172 - val_accuracy: 0.6044\n",
-      "Epoch 395/800\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 395/800\n",
       "28/28 [==============================] - 7s 249ms/step - loss: 1.0765 - accuracy: 0.5963 - val_loss: 1.0319 - val_accuracy: 0.6124\n",
       "Epoch 396/800\n",
       "28/28 [==============================] - 7s 251ms/step - loss: 1.0667 - accuracy: 0.5961 - val_loss: 1.0117 - val_accuracy: 0.6169\n",
@@ -3873,13 +3855,7 @@
       "28/28 [==============================] - 7s 252ms/step - loss: 1.0395 - accuracy: 0.6095 - val_loss: 0.9914 - val_accuracy: 0.6194\n",
       "Epoch 506/800\n",
       "28/28 [==============================] - 7s 260ms/step - loss: 1.0464 - accuracy: 0.6039 - val_loss: 1.0170 - val_accuracy: 0.6127\n",
-      "Epoch 507/800\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 507/800\n",
       "28/28 [==============================] - 7s 252ms/step - loss: 1.0400 - accuracy: 0.6045 - val_loss: 0.9782 - val_accuracy: 0.6317\n",
       "Epoch 508/800\n",
       "28/28 [==============================] - 7s 247ms/step - loss: 1.0380 - accuracy: 0.6068 - val_loss: 1.0263 - val_accuracy: 0.6138\n",
@@ -4109,13 +4085,7 @@
       "28/28 [==============================] - 7s 249ms/step - loss: 1.0130 - accuracy: 0.6175 - val_loss: 0.9795 - val_accuracy: 0.6334\n",
       "Epoch 618/800\n",
       "28/28 [==============================] - 7s 247ms/step - loss: 1.0102 - accuracy: 0.6203 - val_loss: 0.9740 - val_accuracy: 0.6317\n",
-      "Epoch 619/800\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 619/800\n",
       "28/28 [==============================] - 7s 247ms/step - loss: 1.0126 - accuracy: 0.6170 - val_loss: 1.1140 - val_accuracy: 0.5859\n",
       "Epoch 620/800\n",
       "28/28 [==============================] - 7s 251ms/step - loss: 1.0256 - accuracy: 0.6121 - val_loss: 0.9945 - val_accuracy: 0.6306\n",
@@ -4345,13 +4315,7 @@
       "28/28 [==============================] - 7s 255ms/step - loss: 0.9881 - accuracy: 0.6257 - val_loss: 0.9643 - val_accuracy: 0.6267\n",
       "Epoch 730/800\n",
       "28/28 [==============================] - 7s 251ms/step - loss: 0.9983 - accuracy: 0.6224 - val_loss: 0.9625 - val_accuracy: 0.6381\n",
-      "Epoch 731/800\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 731/800\n",
       "28/28 [==============================] - 7s 250ms/step - loss: 0.9979 - accuracy: 0.6242 - val_loss: 0.9631 - val_accuracy: 0.6392\n",
       "Epoch 732/800\n",
       "28/28 [==============================] - 7s 261ms/step - loss: 1.0006 - accuracy: 0.6217 - val_loss: 0.9795 - val_accuracy: 0.6283\n",
@@ -4564,7 +4528,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "cec590ea",
+   "id": "ed7ab882",
    "metadata": {},
    "outputs": [
     {
@@ -4606,7 +4570,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "0b996f2c",
+   "id": "5146c004",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4616,7 +4580,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "0bc97d3f",
+   "id": "8b058a2a",
    "metadata": {},
    "outputs": [
     {
@@ -4652,7 +4616,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "c9ccb3d0",
+   "id": "2fe87734",
    "metadata": {
     "scrolled": true
    },
@@ -4672,7 +4636,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "5f9389b0",
+   "id": "a12c5a7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4685,7 +4649,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "1f99b283",
+   "id": "52714f3e",
    "metadata": {},
    "outputs": [
     {
@@ -4708,7 +4672,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "6cb94ac7",
+   "id": "6f1e7df1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4749,7 +4713,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "7bd22231",
+   "id": "b61c35c0",
    "metadata": {},
    "outputs": [
     {
@@ -4796,8 +4760,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 147,
+   "id": "37bd0c98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_9\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d_36 (Conv2D)          (None, 48, 48, 32)        320       \n",
+      "                                                                 \n",
+      " max_pooling2d_36 (MaxPoolin  (None, 24, 24, 32)       0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " conv2d_37 (Conv2D)          (None, 22, 22, 64)        18496     \n",
+      "                                                                 \n",
+      " max_pooling2d_37 (MaxPoolin  (None, 11, 11, 64)       0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " conv2d_38 (Conv2D)          (None, 9, 9, 128)         73856     \n",
+      "                                                                 \n",
+      " max_pooling2d_38 (MaxPoolin  (None, 4, 4, 128)        0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " conv2d_39 (Conv2D)          (None, 2, 2, 256)         295168    \n",
+      "                                                                 \n",
+      " max_pooling2d_39 (MaxPoolin  (None, 1, 1, 256)        0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " dropout_9 (Dropout)         (None, 1, 1, 256)         0         \n",
+      "                                                                 \n",
+      " flatten_9 (Flatten)         (None, 256)               0         \n",
+      "                                                                 \n",
+      " dense_22 (Dense)            (None, 512)               131584    \n",
+      "                                                                 \n",
+      " dense_23 (Dense)            (None, 256)               131328    \n",
+      "                                                                 \n",
+      " dense_24 (Dense)            (None, 7)                 1799      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 652,551\n",
+      "Trainable params: 652,551\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "mdl10_1.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "395b6067",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Angry', 'Disgust', 'Fear', 'Happy', 'Sad', 'Surprise', 'Neutral']"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emotions = {0:'Angry', 1:'Disgust', 2:'Fear', 3:'Happy', 4:'Sad', 5:'Surprise', 6:'Neutral'}\n",
+    "xticklabels=[i for i in emotions.values()],\n",
+    "yticklabels=[i for i in emotions.values()],"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ccf5be2d",
+   "id": "5c4a58df",
    "metadata": {},
    "outputs": [],
    "source": []
